# RaA

./: .env.example  .gitignore  .pylintrc  README.md  future_plans.md  pyproject.toml  requirements.txt
configs/: benchmark_config.yaml  central_experiment.yaml
docs/: 01_introduction.md  02_getting_started.md  03_architecture.md  04_evaluation.md  05_reporting.md  06_extending.md
prompts/: image_image_prompt.txt  image_text_prompt.txt  system_instruction_eval.txt  system_instruction_report.txt  text_text_prompt.txt
results/central_experiment1/: config_snapshot.yaml  metadata.json
results/central_experiment1/Girl-with-a-Pearl-Earring/: text_iter1.txt  text_iter10.txt  text_iter11.txt  text_iter12.txt  text_iter13.txt  text_iter14.txt  text_iter15.txt  text_iter16.txt  text_iter17.txt  text_iter18.txt  text_iter19.txt  text_iter2.txt  text_iter20.txt  text_iter3.txt  text_iter4.txt  text_iter5.txt  text_iter6.txt  text_iter7.txt  text_iter8.txt  text_iter9.txt
src/: autorater_visualizer.py  benchmark_config.py  evaluation_engine.py  graph_creator.py  loop_controller.py  main.py  output_manager.py  prompt_engine.py  reporting.py  reporting_summary.py
tests/: __init__.py  test_benchmark_config.py  test_captioning.py  test_embed_asset.py  test_evaluation_engine.py  test_evaluation_engine_retries.py  test_graph_creator.py  test_image_generation.py  test_image_start.py  test_loop_controller_robustness.py  test_output_manager.py  test_prompt_engine.py  test_reporting.py  test_reporting_summary.py  test_run_rater.py  test_text_start.py  test_utils.py  test_visualizer.py
(+188 files in other folders)
